	  source file, and adjust related variables accordingly.  New
	  file help.c; changes to help_init(), help_line_len(), and
	  do_help() (all moved to help.c). (DLR)
	- Tweak a few functions to remove the assumption that the file
	  always ends in a magicline.  Changes to cut_line(),
	  do_cut_till_end(), open_buffer(), read_file(), write_file(),
	  do_last_line(), do_para_end(), backup_lines(),
	  do_alt_speller(), and do_wordlinechar_count(). (DLR)
	- Tweak a few functions to rely on fileage and filebot instead
	  of NULL for their checks to detect the top or bottom of the
	  file.  Changes to cut_line(), cut_to_eol(), do_page_up(),
	  do_page_down(), do_para_end(), do_next_word(), do_prev_word(),
	  do_up(), do_down(), do_scroll_down(), do_right(), do_mouse(),
	  do_gotolinecolumn(), do_delete(), begpar(), and
	  find_paragraph(). (DLR)
	- Add new -L/--nonewlines command line option, and new
	  "nonewlines" rcfile option, to control whether nano adds
	  magiclines to the ends of files.  Changes to read_file(),
	  write_marked_file(), move_to_filestruct(),
	  copy_from_filestruct(), usage(), do_output(), main(),
	  do_replace_loop(), do_delete(), do_int_spell_fix(),
	  do_alt_speller(), nano.1, nanorc.5, nano.texi, and
	  nanorc.sample. (DLR, suggested by Jaime
	  <re2823@Safe-mail.net>)
	- Move functions specific to the file browser to their own
	  source file, and adjust related variables accordingly.  New
	  file browser.c; changes to striponedir(), browser_init(),
	  do_browser(), and do_browse_from() (all moved to browser.c).
	  (DLR)
	- Add the statusbar prompt's equivalent of placewewant,
	  statusbar_pww, to prompt.c, and convert its functions to use
	  it.  New functions reset_statusbar_cursor() and
	  need_statusbar_horizontal_update(); changes to
	  do_statusbar_mouse(), do_statusbar_output(),
	  do_statusbar_home(), do_statusbar_end(), do_statusbar_right(),
	  do_statusbar_left(), do_statusbar_delete(),